# FINQA_rag_ft

./: .gitignore  Makefile  README.md  app.py  assignment_2_comparative_financial_qa_system_rag_vs_fine_tuning_CLEAN.txt  main.py  pyproject.toml  requirements.txt  test_complete_system.py
app/: app.py
config/: settings.py
core/fine_tuning/: __init__.py  moe.py  trainer.py
core/rag/: __init__.py  reranker.py  retrieve.py
data/qa/: qa_pairs.csv  qa_pairs_filled.csv  qa_pairs_filled_train.csv  train_nar.csv  train_num.csv
data/qas/: gold.yaml
data/segments_100/: HDFC_IAR_FY24.jsonl  HDFC_IAR_FY25.jsonl  manifest.json
data/segments_400/: HDFC_IAR_FY24.jsonl  HDFC_IAR_FY25.jsonl  manifest.json
interface/: streamlit_app.py
scripts/: eval_compare.py  eval_ft.py  fill_qas_from_index.py  generate_report.py  preprocess.py  rechunk.py  setup.py  simple_fine_tuning.py  streamlit_app.py
src/: config.py
src/cli/: ask.py  ask_ft_moe.py
src/finqa/: __init__.py  financial_rag.py
src/ft_moe/: gate.py
src/rag/: build_index.py  retrieve.py  utils.py
src/train/: ft.py
tests/: test_financial_rag.py  test_system.py
